--- a/core/res/res/values-rm/strings.xml
+++ b/core/res/res/values-rm/strings.xml
@@ -2592,4 +2592,8 @@
     <skip />
     <!-- no translation found for restr_pin_countdown:one (4835639969503729874) -->
     <!-- no translation found for restr_pin_countdown:other (8030607343223287654) -->
+    <!-- no translation found for transient_navigation_confirmation (4907844043611123426) -->
+    <skip />
+    <!-- no translation found for transient_navigation_confirmation_long (8061685920508086697) -->
+    <skip />
 </resources>
